.. _Changelog:

Changelog file for Kamaki versions >= 0.13
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. _Changelog-0.14:

v0.14
=====

Features
--------

* Rename "wait_*" kamaki.clients.Client methods to
  "wait_until" and "wait_while"
* Implement "wait" commands in CLI, where applicable
* Implement "wait" functionality for volumes 
* Print public url in "kamaki file upload --public"

.. _Changelog-0.13:

v0.13.1
=======

Released: Fri Dec 12 17:32:01 EET 2014

Bug Fixes
---------

* Avoid filling config file with default values

v0.13
=====

Released: Tue Nov 18 11:13:58 EET 2014

Features
--------

* Name and Type filters in endpoint list
* In image register, meta gets same sharing as image
* Allow image register to auto-resolve remote path from local file
* Merge ClientError and AstakosClientException --> AstakosClientError
* Restore kamaki file publish/unpublish
* Accept username or UUID in kamaki file --account/--to-account
* History has now a buffer limit
* Slice notation in history show
* Datetime support in DateArgument
* Resources can be reassigned to projects
* Update account API commands to reflect changes in synnefo 0.16
* Implement a get_endpoint_url method and use it
* Rename kamaki.clients.Client.base_url --> endpoint_url, keep BW compatibility
* Remove deprecated --hard argument in "kamaki server reboot"
* Modify upload and download command semantics, to be more intuitive
* Implement more console types (vnc-ws and vnc-wss)
* Support secure HTTP connections with SSL [grnet/kamaki#54]

Support
-------

* Adjust project commands to project_API changes
* Add "dateutils" to dependencies
* Rename packages, classes and objects to conform to pep8 standards
* Use the term "project_id" instead of "project" everywhere in kamaki.clients
* Update library documentation with examples [grnet/kamaki#49]


Bug Fixes
---------

* Register image with upload but no metafile
* Minor typos and updates in command help messages