@@ -16,6 +16,7 @@ Features
 * Implement "wait" commands in CLI, where applicable
 * Implement "wait" functionality for volumes 
 * Print public url in "kamaki file upload --public"
+* Return object request headers in download methods
 
 .. _Changelog-0.13:
 
